Extend accounts api
