# accounts/src/main/java/org/vl4ds4m/banking/accounts/api/AccountController.java
@@ -6,6 +6,7 @@ import org.springframework.web.bind.annotation.RestController;
 import org.vl4ds4m.banking.accounts.openapi.server.api.AccountsApi;
 import org.vl4ds4m.banking.accounts.openapi.server.model.*;
 import org.vl4ds4m.banking.accounts.service.AccountService;
+import org.vl4ds4m.banking.common.openapi.model.Currency;
 import org.vl4ds4m.banking.common.util.To;
 
 @RestController
@@ -25,10 +26,19 @@ public class AccountController implements AccountsApi {
     }
 
     @Override
-    public ResponseEntity<BalanceResponse> getAccountBalance(Long accountNumber) {
-        var account = accountService.getAccount(accountNumber);
+    public ResponseEntity<AccountResponse> getAccountByCustomer(String login, Currency currency) {
+        var account = accountService.getAccount(login, To.currency(currency));
+        var response = new AccountResponse(account.number(), account.money().amount());
+        return ResponseEntity.ok(response);
+    }
 
-        var response = new BalanceResponse(
+    @Override
+    public ResponseEntity<AccountInfo> getAccountInfo(Long accountNumber) {
+        var account = accountService.getAccount(accountNumber);
+        var customerLogin = accountService.getAccountOwnerLogin(accountNumber);
+
+        var response = new AccountInfo(
+                customerLogin,
                 To.restCurrency(account.currency()),
                 account.money().amount());
         return ResponseEntity.ok(response);
